add slider for pc

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,111 +23,111 @@
       <h1 class = "retroshadow"> Ames Housing Dataset</h1>
       <div class="slider">
           <div class="slider-component">
-              <div class="slider-text"><button onclick="myFunction('btn-OverallQual')" id="btn-OverallQual"
-                                               style="background:grey;">OverallQual</button></div>
+              <div class="slider-text"><button onclick="myFunction('btn-BsmtQual')" id="btn-BsmtQual"
+                                               style="background:grey;">BsmtQual</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
             <div class="rail" style="width: 160px;">
-            <img id="minOverallQual"
+            <img id="minBsmtQual"
                 src="../static/min-arrow.png"
                 role="slider"
                 tabindex="0"
                 class="min thumb"
                 aria-valuemin="1"
                 aria-valuenow="1"
-                aria-valuemax="10">
-            <img id="maxOverallQual"
+                aria-valuemax="5">
+            <img id="maxBsmtQual"
             src="../static/max-arrow.png"
             role="slider"
             tabindex="0"
             class="max thumb"
             aria-valuemin="1"
-            aria-valuenow="10"
-            aria-valuemax="10">
+            aria-valuenow="5"
+            aria-valuemax="5">
             </div>
-                <div class="rail-label max">10</div>
+                <div class="rail-label max">5</div>
             </div>
           </div>
 
           <div class="slider-component">
-              <div class="slider-text"><button onclick="myFunction('btn-SalePrice')" id="btn-SalePrice"
-                                               style="background:grey;">SalePrice</button></div>
+              <div class="slider-text"><button onclick="myFunction('btn-ExterQual')" id="btn-ExterQual"
+                                               style="background:grey;">ExterQual</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">100</div>
 
             <div class="rail" style="width: 160px;">
-    <img id="minOverallQual"
+    <img id="minBsmtQual"
          src="../static/min-arrow.png"
          role="slider"
          tabindex="0"
          class="min thumb"
-         aria-valuemin="30000"
-         aria-valuenow="30000"
-         aria-valuemax="800000">
-    <img id="maxOverallQual"
+         aria-valuemin="1"
+         aria-valuenow="1"
+         aria-valuemax="5">
+    <img id="maxBsmtQual"
          src="../static/max-arrow.png"
          role="slider"
          tabindex="0"
          class="max thumb"
-         aria-valuemin="30000"
-         aria-valuenow="800000"
-         aria-valuemax="800000">
+         aria-valuemin="1"
+         aria-valuenow="5"
+         aria-valuemax="5">
   </div>
-                <div class="rail-label max">800000</div>
+                <div class="rail-label max">5</div>
             </div>
         </div>
           <div class="slider-component">
-                            <div class="slider-text"><button onclick="myFunction('btn-LotArea')" id="btn-LotArea"
-                                               style="background:grey;">Lot Area</button></div>
+                            <div class="slider-text"><button onclick="myFunction('btn-BsmtFinSF')" id="btn-BsmtFinSF"
+                                               style="background:grey;">BsmtFinSF</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
 
             <div class="rail" style="width: 160px;">
-            <img id="minLotArea"
-                src="../static/min-arrow.png"
-                role="slider"
-                tabindex="0"
-                class="min thumb"
-                aria-valuemin="1000"
-                aria-valuenow="1000"
-                aria-valuemax="50000">
-            <img id="maxLotArea"
-            src="../static/max-arrow.png"
-            role="slider"
-            tabindex="0"
-            class="max thumb"
-            aria-valuemin="1000"
-            aria-valuenow="50000"
-            aria-valuemax="50000">
-            </div>
-                <div class="rail-label max">50000</div>
-            </div>
-          </div>
-          <div class="slider-component">
-              <div class="slider-text"><button onclick="myFunction('btn-GarageArea')" id="btn-GarageArea"
-                                               style="background:grey;">Garage Area</button></div>
-            <div class="aria-widget-slider">
-            <div class="rail-label min">0</div>
-
-            <div class="rail" style="width: 160px;">
-            <img id="minLotArea"
+            <img id="minBsmtFinSF"
                 src="../static/min-arrow.png"
                 role="slider"
                 tabindex="0"
                 class="min thumb"
                 aria-valuemin="0"
                 aria-valuenow="0"
-                aria-valuemax="1500">
-            <img id="maxLotArea"
+                aria-valuemax="2500">
+            <img id="maxBsmtFinSF"
             src="../static/max-arrow.png"
             role="slider"
             tabindex="0"
             class="max thumb"
             aria-valuemin="0"
-            aria-valuenow="1500"
-            aria-valuemax="1500">
+            aria-valuenow="2500"
+            aria-valuemax="2500">
             </div>
-                <div class="rail-label max">1500</div>
+                <div class="rail-label max">2500</div>
+            </div>
+          </div>
+          <div class="slider-component">
+              <div class="slider-text"><button onclick="myFunction('btn-FireplaceQu')" id="btn-FireplaceQu"
+                                               style="background:grey;">FireplaceQu</button></div>
+            <div class="aria-widget-slider">
+            <div class="rail-label min">0</div>
+
+            <div class="rail" style="width: 160px;">
+            <img id="minBsmtFinSF"
+                src="../static/min-arrow.png"
+                role="slider"
+                tabindex="0"
+                class="min thumb"
+                aria-valuemin="1"
+                aria-valuenow="1"
+                aria-valuemax="5">
+            <img id="maxBsmtFinSF"
+            src="../static/max-arrow.png"
+            role="slider"
+            tabindex="0"
+            class="max thumb"
+            aria-valuemin="1"
+            aria-valuenow="5"
+            aria-valuemax="5">
+            </div>
+                <div class="rail-label max">5</div>
 
             </div>
           </div>
@@ -137,7 +137,7 @@
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
             <div class="rail" style="width: 160px;">
-            <img id="minLotArea"
+            <img id="minBsmtFinSF"
                 src="../static/min-arrow.png"
                 role="slider"
                 tabindex="0"
@@ -145,7 +145,7 @@
                 aria-valuemin="1"
                 aria-valuenow="1"
                 aria-valuemax="5">
-            <img id="maxLotArea"
+            <img id="maxBsmtFinSF"
             src="../static/max-arrow.png"
             role="slider"
             tabindex="0"
@@ -165,7 +165,7 @@
             <div class="rail-label min">0</div>
 
             <div class="rail" style="width: 160px;">
-            <img id="minLotArea"
+            <img id="minBsmtFinSF"
                 src="../static/min-arrow.png"
                 role="slider"
                 tabindex="0"
@@ -173,7 +173,7 @@
                 aria-valuemin="2006"
                 aria-valuenow="2006"
                 aria-valuemax="2010">
-            <img id="maxLotArea"
+            <img id="maxBsmtFinSF"
             src="../static/max-arrow.png"
             role="slider"
             tabindex="0"
@@ -231,7 +231,7 @@
             <table class="table-right-bottom">
     <tr align="center">
       <td class="lbl">SalePrice</td>
-      <td class="lbl">Quality</td>
+      <td class="lbl">OverallQual</td>
 	  <td class="lbl">Neighborhood</td>
     </tr>
     <tr>
