--- a/templates/index.html
+++ b/templates/index.html
@@ -77,8 +77,8 @@
             </div>
         </div>
           <div class="slider-component">
-                            <div class="slider-text"><button onclick="myFunction('btn-BsmtFinSF')" id="btn-BsmtFinSF"
-                                               style="background:grey;">BsmtFinSF</button></div>
+                            <div class="slider-text"><button onclick="myFunction('btn-BsmtFinSF1')" id="btn-BsmtFinSF1"
+                                               style="background:grey;">BsmtFinSF1</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
 
