--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,10 @@
       href="https://cdn4.iconfinder.com/data/icons/new-google-logo-2015/400/new-google-favicon-512.png">
       <link rel="stylesheet" type="text/css" href="../static/style.css" media="screen"/>
 	  <link rel="stylesheet" type="text/css" href="../static/multithumb-slider.css" media="screen"/>
+
    </head>
    <body>
-      <h1 class = "retroshadow"> Ames Housing Dataset</h1>
+      <div class = "retroshadow"> Ames Housing Dataset</div>
       <div class="slider">
           <div class="slider-component">
               <div class="slider-text"><button onclick="myFunction('btn-BsmtQual')" id="btn-BsmtQual"
