--- a/static/style.css
+++ b/static/style.css
@@ -13,10 +13,9 @@ li {
      cursor: pointer;
 }
  .retroshadow {
-     color: #2c2c2c;
+     color: teal;
      // background-color: #d5d5d5;
      letter-spacing: .05em;
-     text-shadow: 4px 4px 0px #d5d5d5, 4px 4px 0px rgba(0, 0, 0, 0.2);
      font-size: 40px;
     text-align: center;
     margin-bottom: 25px;
