--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
       <div class = "retroshadow"> Ames Housing Dataset</div>
       <div class="slider">
           <div class="slider-component">
-              <div class="slider-text"><button onclick="myFunction('btn-BsmtQual')" id="btn-BsmtQual"
-                                               style="background:grey;">BsmtQual</button></div>
+              <div class="slider-text"><button onclick="myFunction('btn-LotArea')" id="btn-LotArea"
+                                               style="background:grey;">LotArea</button></div>
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
             <div class="rail" style="width: 160px;">
@@ -34,19 +34,19 @@
                 role="slider"
                 tabindex="0"
                 class="min thumb"
-                aria-valuemin="1"
-                aria-valuenow="1"
-                aria-valuemax="5">
+                aria-valuemin="1000"
+                aria-valuenow="1000"
+                aria-valuemax="80000">
             <img id="maxBsmtQual"
             src="../static/max-arrow.png"
             role="slider"
             tabindex="0"
             class="max thumb"
-            aria-valuemin="1"
-            aria-valuenow="5"
-            aria-valuemax="5">
+            aria-valuemin="1000"
+            aria-valuenow="80000"
+            aria-valuemax="80000">
             </div>
-                <div class="rail-label max">5</div>
+                <div class="rail-label max">80000</div>
             </div>
           </div>
 
