--- a/static/style.css
+++ b/static/style.css
@@ -10,322 +10,389 @@ body {
 }
 
 li {
-     cursor: pointer;
+    cursor: pointer;
 }
- .retroshadow {
-     color: teal;
-     // background-color: #d5d5d5;
-     letter-spacing: .05em;
-     font-size: 40px;
+
+.retroshadow {
+    color: #b7d4d3;
+    // background-color: #d5d5d5;
+    letter-spacing: .05em;
+    font-size: 40px;
     text-align: center;
     margin-bottom: 25px;
 }
 
- .dotScreePlot {
+.dotScreePlot {
     pointer-events: all;
 }
 
- h1 {
-     font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-     font-size: 40px;
-     margin-left : 250px;
-     margin-right : 250px;
-     text-align: center;
-     text-transform: uppercase;
-     text-rendering: optimizeLegibility;
+h1 {
+    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+    font-size: 40px;
+    margin-left: 250px;
+    margin-right: 250px;
+    text-align: center;
+    text-transform: uppercase;
+    text-rendering: optimizeLegibility;
 }
- body {
-     padding-right: 80px;
+
+body {
+    padding-right: 80px;
     padding-left: 80px;
     background: #323F4B;
     min-height: 100vh;
-    
-
-}
- .tooltip-donut {
-     position: absolute;
-     text-align: center;
-     padding: .5rem;
-     background: #FFFFFF;
-     color: #313639;
-     border: 1px solid #313639;
-     border-radius: 8px;
-     font-size: 1.3rem;
-}
- .line {
-     fill: none;
-     stroke: steelblue;
-     stroke-width: 2px;
-}
- .grid line {
-     stroke: lightgrey;
-     stroke-opacity: 0.7;
-     shape-rendering: crispEdges;
-}
- .button{
-     display:inline-block;
-     padding:0.3em 1.2em;
-     width:10em;
-     margin:0 0.7em 0.7em 0;
-     border-radius:2em;
-     box-sizing: border-box;
-     text-decoration:none;
-     font-family:'Roboto',sans-serif;
-     font-weight:300;
-     color:#FFFFFF;
-     background-color:#4eb5f1;
-     text-align:center;
-     float:left;
-     transition: all 0.2s;
-}
- .button:hover{
-     background-color:#4095c6;
-}
 
 
-axisTeal line{
-  stroke: #6EC6BA;
 }
 
-.axisTeal path{
-  stroke: #6EC6BA;
-}
-
-.axisTeal text{
-  fill: #6EC6BA;
-}
-
-axisPink line{
-  stroke: #FF7F7F;
-}
-
-.axisPink path{
-  stroke: #FF7F7F;
-}
-
-.axisPink text{
-  fill: #FF7F7F;
-}
-
-axisWhite line{
-  stroke: #FFFFFF;
-}
-
-.axisWhite path{
-  stroke: #e5e5e5;
-}
-
-.axisWhite text{
-  fill: #e5e5e5;
-}
-
-.axisWhite tick{
-  stroke: #e5e5e5;
-}
-
-div.tooltip, tooltip.tooltip {
-    position: absolute;			
-    text-align: center;								
-    padding: 2px;				
-    font: 12px sans-serif;		
-    background: lightsteelblue;	
-    border: solid;		
+.tooltip-donut {
+    position: absolute;
+    text-align: center;
+    padding: .5rem;
+    background: #FFFFFF;
+    color: #313639;
+    border: 1px solid #313639;
     border-radius: 8px;
-    pointer-events: auto;	
+    font-size: 1.3rem;
 }
 
-.multi-range, .multi-range * { box-sizing: border-box; padding: 0; margin: 0; }
-.multi-range { 
-    position: relative; width: 160px; height: 28px; margin: 16px;
-    border: 1px solid #ddd; font-family: monospace;
+.line {
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 2px;
 }
-.multi-range > hr { position: absolute; width: 100%; top: 50%; }
-.multi-range > input[type=range] {
-    width: calc(100% - 16px); 
-    position: absolute; bottom: 6px; left: 0;
+
+.grid line {
+    stroke: lightgrey;
+    stroke-opacity: 0.7;
+    shape-rendering: crispEdges;
 }
-.multi-range > input[type=range]:last-of-type { margin-left: 16px; }
-.multi-range > input[type=range]::-webkit-slider-thumb { transform: translateY(-18px); }
-.multi-range > input[type=range]::-webkit-slider-runnable-track { -webkit-appearance: none; height: 0px; }
-.multi-range > input[type=range]::-moz-range-thumb { transform: translateY(-18px); }
-.multi-range > input[type=range]::-moz-range-track { -webkit-appearance: none; height: 0px; }
-.multi-range > input[type=range]::-ms-thumb { transform: translateY(-18px); }
-.multi-range > input[type=range]::-ms-track { -webkit-appearance: none; height: 0px; }
-.multi-range::after { 
-    content: attr(data-lbound) ' - ' attr(data-ubound); 
-    position: absolute; top: 0; left: 100%; white-space: nowrap;
-    display: block; padding: 0px 4px; margin: -1px 2px;
-    height: 26px; width: auto; border: 1px solid #ddd; 
-    font-size: 13px; line-height: 26px;
+
+.button {
+    display: inline-block;
+    padding: 0.3em 1.2em;
+    width: 10em;
+    margin: 0 0.7em 0.7em 0;
+    border-radius: 2em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #FFFFFF;
+    background-color: #4eb5f1;
+    text-align: center;
+    float: left;
+    transition: all 0.2s;
+}
+
+.button:hover {
+    background-color: #4095c6;
 }
 
 
-div.parallelCoordinates{
-  margin: 2em;
+axisTeal line {
+    stroke: #6EC6BA;
 }
 
-g.inactive path, g.active path{
-  fill: none;
-  stroke: transparent;
-  stroke-linecap:"round"
+.axisTeal path {
+    stroke: #6EC6BA;
 }
 
-.graph-class-left{
+.axisTeal text {
+    fill: #6EC6BA;
+}
+
+axisPink line {
+    stroke: #FF7F7F;
+}
+
+.axisPink path {
+    stroke: #FF7F7F;
+}
+
+.axisPink text {
+    fill: #FF7F7F;
+}
+
+axisWhite line {
+    stroke: #FFFFFF;
+}
+
+.axisWhite path {
+    stroke: #e5e5e5;
+}
+
+.axisWhite text {
+    fill: #e5e5e5;
+}
+
+.axisWhite tick {
+    stroke: #e5e5e5;
+}
+
+div.tooltip,
+tooltip.tooltip {
+    position: absolute;
+    text-align: center;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: solid;
+    border-radius: 8px;
+    pointer-events: auto;
+}
+
+.multi-range,
+.multi-range * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+.multi-range {
+    position: relative;
+    width: 160px;
+    height: 28px;
+    margin: 16px;
+    border: 1px solid #ddd;
+    font-family: monospace;
+}
+
+.multi-range>hr {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+}
+
+.multi-range>input[type=range] {
+    width: calc(100% - 16px);
+    position: absolute;
+    bottom: 6px;
+    left: 0;
+}
+
+.multi-range>input[type=range]:last-of-type {
+    margin-left: 16px;
+}
+
+.multi-range>input[type=range]::-webkit-slider-thumb {
+    transform: translateY(-18px);
+}
+
+.multi-range>input[type=range]::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+    height: 0px;
+}
+
+.multi-range>input[type=range]::-moz-range-thumb {
+    transform: translateY(-18px);
+}
+
+.multi-range>input[type=range]::-moz-range-track {
+    -webkit-appearance: none;
+    height: 0px;
+}
+
+.multi-range>input[type=range]::-ms-thumb {
+    transform: translateY(-18px);
+}
+
+.multi-range>input[type=range]::-ms-track {
+    -webkit-appearance: none;
+    height: 0px;
+}
+
+.multi-range::after {
+    content: attr(data-lbound) ' - 'attr(data-ubound);
+    position: absolute;
+    top: 0;
+    left: 100%;
+    white-space: nowrap;
+    display: block;
+    padding: 0px 4px;
+    margin: -1px 2px;
+    height: 26px;
+    width: auto;
+    border: 1px solid #ddd;
+    font-size: 13px;
+    line-height: 26px;
+}
+
+
+div.parallelCoordinates {
+    margin: 2em;
+}
+
+g.inactive path,
+g.active path {
+    fill: none;
+    stroke: transparent;
+    stroke-linecap: "round"
+}
+
+.graph-class-left {
     display: inline-block;
     width: 50%;
 }
 
-.graph-class-top{
-    height:70%;
-}
-.graph-class-bottom{
-    height:30%;
-}
-.graph-class-right{
-width: 30%;
-margin-top=-30px;
-display: inline-block;
-margin-left:70px
-}
-.parallel-class{
-    float:right;
-    height:30%;
-}
-.bubble-class{
-height:30%;
+.graph-class-top {
+    height: 70%;
 }
 
-.dcm-class{
-width: 50%;
-margin-left:70px;
+.graph-class-bottom {
+    height: 30%;
 }
 
-.line-class{
-margin-top:-40px;
-
-height:30%;
+.graph-class-right {
+    width: 30%;
+    margin-top=-30px;
+    display: inline-block;
+    margin-left: 70px
 }
 
-.slider{
-float:left;
-width:12%;
-margin-left:-40px;
-margin-top: 64px;
-}
-.slider-component{
-height:10%;
-margin-bottom:70px;
-
+.parallel-class {
+    float: right;
+    height: 30%;
 }
 
-.table-class{
-width:700px;
-height:220px;
-color:#e5e5e5;
-margin-left:120px;
-padding-left: 118px;
+.bubble-class {
+    height: 30%;
 }
 
-table, th, td {
-  border: 1px solid black;
+.dcm-class {
+    width: 50%;
+    margin-left: 70px;
 }
 
-.table-left-top{
-height:30%;
-width: 100%;
+.line-class {
+    margin-top: -40px;
+
+    height: 30%;
+}
+
+.slider {
+    float: left;
+    width: 12%;
+    margin-left: -40px;
+    margin-top: 64px;
+}
+
+.slider-component {
+    height: 10%;
+    margin-bottom: 70px;
 
 }
 
-.table-left{
-height:100%;
-width:30%;
-float:left;
-background:teal;
+.table-class {
+    width: 700px;
+    height: 220px;
+    color: #e5e5e5;
+    margin-left: 120px;
+    padding-left: 118px;
 }
 
-.table-right{
-height:100%;
-width:50%;
-display: inline-block;
-background:#65B3b3;
+table,
+th,
+td {
+    border: 1px solid black;
 }
 
-.table-left-bottom{
-height:70%;
-width: 100%;
+.table-left-top {
+    height: 30%;
+    width: 100%;
+
 }
 
-.table-right-top{
-height:30%;
-width:100%;
+.table-left {
+    height: 100%;
+    width: 30%;
+    float: left;
+    background: teal;
 }
 
-.table-right-bottom{
-height:70%;
-width:100%;
-}
-.lbl-number{
-font-size: 60px;
-}
-.lbl{
-color:black;
+.table-right {
+    height: 100%;
+    width: 50%;
+    display: inline-block;
+    background: #65B3b3;
 }
 
-.table-right-bottom td{
-color:black;
+.table-left-bottom {
+    height: 70%;
+    width: 100%;
 }
 
- .overlay {
-        fill: none;
-        pointer-events: all;
-    }
-	
-	  .focusS circle {
-        fill: steelblue;
-    }
+.table-right-top {
+    height: 30%;
+    width: 100%;
+}
 
-    .focusS text {
-        font-size: 14px;
-		position: absolute;			
-    text-align: center;								
-    padding: 2px;				
-    font: 12px sans-serif;		
-    background: lightsteelblue;	
-    border: solid;		
+.table-right-bottom {
+    height: 70%;
+    width: 100%;
+}
+
+.lbl-number {
+    font-size: 60px;
+}
+
+.lbl {
+    color: black;
+}
+
+.table-right-bottom td {
+    color: black;
+}
+
+.overlay {
+    fill: none;
+    pointer-events: all;
+}
+
+.focusS circle {
+    fill: steelblue;
+}
+
+.focusS text {
+    font-size: 14px;
+    position: absolute;
+    text-align: center;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: solid;
     border-radius: 8px;
-	cursor:pointer;
+    cursor: pointer;
     pointer-events: auto;
-    }
-	
-	  .focusO circle {
-        fill: steelblue;
-    }
+}
 
-    .focusO text {
-        font-size: 14px;
-		position: absolute;			
-    text-align: center;								
-    padding: 2px;				
-    font: 12px sans-serif;		
-    background: lightsteelblue;	
-    border: solid;		
+.focusO circle {
+    fill: steelblue;
+}
+
+.focusO text {
+    font-size: 14px;
+    position: absolute;
+    text-align: center;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: solid;
     border-radius: 8px;
-	cursor:pointer;
+    cursor: pointer;
     pointer-events: auto;
-    }
+}
 
-   
 
-    
-
-.dcm-name, .linegraph-name, .bubble-name{
+.dcm-name,
+.linegraph-name,
+.bubble-name {
     color: white;
     text-align: center;
     font-size: 12px;
 }
 
-
-.pc-name{
+.pc-name {
     color: white;
     text-align: right;
     font-size: 12px;
